samples/_failures_safe/1761697887_d95879_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e02ea3c1.c: In function ‘main’:
./samples/SAFE/__tmp_e02ea3c1.c:135:58: error: expected ‘)’ at end of input
  135 |                stack_logs[i].level, stack_logs[i].message
      |                                                          ^
      |                                                          )
./samples/SAFE/__tmp_e02ea3c1.c:134:15: note: to match this ‘(’
  134 |         printf("%s %s %s\n", stack_logs[i].timestamp,
      |               ^
./samples/SAFE/__tmp_e02ea3c1.c:135:16: error: expected declaration or statement at end of input
  135 |                stack_logs[i].level, stack_logs[i].message
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_e02ea3c1.c:135:16: error: expected declaration or statement at end of input
